Completionof exercises; 1 issue is spacing between the white card and blue background at the bottom of the page

--- a/css/flexbox-fundamentals-exercise.css
+++ b/css/flexbox-fundamentals-exercise.css
@@ -42,6 +42,9 @@ h2, h3 {
     padding: 1em;
     margin: 0 auto;
     /* enter needed declarations here */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 section {
@@ -89,10 +92,14 @@ section:nth-of-type(1) div:last-child {
 section:nth-of-type(3) {
     /* enter needed declarations here */
     display: flex;
+    justify-content: space-between;
+
 }
 
 section:nth-of-type(3) h3 {
     /* enter needed declarations here */
+    align-self: center;
+    flex-grow: 1;
 }
 
 .orange-circle {
@@ -108,6 +115,8 @@ section:nth-of-type(3) h3 {
     width: 5em;
     background: brown;
     /* enter needed declarations here */
+    flex-grow: 1;
+
 }
 
 .large-brown-box:nth-of-type(2) {
@@ -116,6 +125,8 @@ section:nth-of-type(3) h3 {
 
 section:nth-of-type(5) {
     /* enter needed declarations here */
+    display: flex;
+    justify-content: space-evenly;
 }
 
 .yellow-box {
@@ -128,6 +139,9 @@ section:nth-of-type(6) {
     background: coral;
     height: 14em;
     /* enter needed declarations here */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .grey-box {
